--- a/Week4-ML-Intro-Classification/Exercise-Logistic-Regression.ipynb
+++ b/Week4-ML-Intro-Classification/Exercise-Logistic-Regression.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the sex column into a continuous variable\n"
+    "# Convert the sex column into a continuous variable by using pd.get_dummies\n"
    ]
   },
   {
@@ -156,8 +156,9 @@
    "outputs": [],
    "source": [
     "# Split our data into testing and training.\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=45)\n",
+    "X_train, X_test, y_train, y_test = ???\n",
     "\n",
+    "# Print the length and width of our testing data.\n",
     "print(X_train.shape, X_test.shape)"
    ]
   },
@@ -180,7 +181,8 @@
     "# Initalize our model\n",
     "\n",
     "\n",
-    "# Train our model using our training data.\n"
+    "# Train our model using our training data.\n",
+    "\n"
    ]
   },
   {
@@ -237,6 +239,7 @@
    "outputs": [],
    "source": [
     "# 1. Plot a confusion matrix of your predicted results. \n",
+    "# If you get an error regarding plt. you must have\n",
     "fig = plt.figure(figsize=(8,8))\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual');\n",
@@ -348,9 +351,12 @@
     "\n",
     "# Run pd.get_dummies on sex, pclass, and embarked of your DataFrame.\n",
     "\n",
+    "\n",
     "# Fill null age values with mean age.\n",
     "\n",
+    "\n",
     "# Create new traveled_alone feature\n",
+    "\n",
     "\n",
     "# Update your `selected_features` to include the new traveled alone and age\n",
     "\n",
