updating exercise again

--- a/Week4-ML-Intro-Classification/Exercise-Logistic-Regression.ipynb
+++ b/Week4-ML-Intro-Classification/Exercise-Logistic-Regression.ipynb
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "# 1. Plot a confusion matrix of your predicted results. \n",
-    "# If you get an error regarding plt. you must have\n",
+    "import matplotlib.pyplot as plt \n",
     "fig = plt.figure(figsize=(8,8))\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual');\n",
@@ -396,7 +396,6 @@
     "print('F1 Score %f' % f1_3)\n",
     "\n",
     "# Plot your confusion matrix.\n",
-    "\n",
     "fig = plt.figure(figsize=(8,8))\n",
     "plt.xlabel('Predicted')\n",
     "plt.ylabel('Actual');"
