--- a/Week7-NLP/Lecture-Natural-Language-Processing.ipynb
+++ b/Week7-NLP/Lecture-Natural-Language-Processing.ipynb
@@ -49,6 +49,9 @@
     "# Import some ML helper function\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import plot_confusion_matrix\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "\n",
     "\n",
     "# Import our metrics to evaluate our model\n",
     "from sklearn import metrics\n",
@@ -337,7 +340,6 @@
     "# df['message_clean'] = df['message_clean'].apply(remove_punctuation)\n",
     "# df['message_clean'] = df['message_clean'].apply(lem_with_pos_tag)\n",
     "# df['message_clean'] = df['message_clean'].apply(remove_stopwords)\n",
-    "\n",
     "# df['message_clean'] = df['message'].apply(text_pipeline)\n",
     "\n",
     "print(\"ORIGINAL TEXT:\", df['message'][0])\n",
@@ -452,26 +454,7 @@
     "accuracy =  model.score(X_test, y_test)\n",
     "\n",
     "# Print our evaluation metrics\n",
-    "print(\"Model Accuracy: %f\" % accuracy)\n",
-    "\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "print(classification_report(y_test, y_pred, target_names=model.classes_))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot the confusion matrix of our results\n",
-    "fig, ax = plt.subplots(figsize=(21, 21))\n",
-    "disp = plot_confusion_matrix(model, X_test, y_test,\n",
-    "                             display_labels=model.classes_,\n",
-    "                             cmap=plt.cm.Blues, ax=ax)\n",
-    "plt.xticks(rotation=90)\n",
-    "disp"
+    "print(\"Model Accuracy: %f\" % accuracy)"
    ]
   },
   {
@@ -489,6 +472,33 @@
     "* The recall is intuitively the ability of the classifier to find all the positive samples.\n",
     "* The recall is the ratio tp / (tp + fn) where tp is the number of true positives and fn the number of false negatives. \n",
     "* if you want to raise recall, lower your classification threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(y_test, y_pred, target_names=model.classes_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the confusion matrix of our results\n",
+    "fig, ax = plt.subplots(figsize=(21, 21))\n",
+    "\n",
+    "disp = plot_confusion_matrix(model, X_test, y_test,\n",
+    "                             display_labels=model.classes_,\n",
+    "                             cmap=plt.cm.Blues, ax=ax)\n",
+    "plt.xticks(rotation=90)\n",
+    "disp"
    ]
   },
   {
@@ -583,6 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Print the predicted probabilies for each class\n",
     "pp = model.predict_proba(new_text_vectorized)\n",
     "for c, p in zip(model.classes_, pp.round(3)[0]):\n",
     "    print(c, p)"
